# C-standard-library-only-AI

./: .gitignore  AI.cpp  AI.hpp  CMakeLists.txt  README.md  main.cpp
.github/workflows/: ci.yml  release.yml
